--- a/benchmark/templates/benchmark/bank_list.html
+++ b/benchmark/templates/benchmark/bank_list.html
@@ -29,7 +29,7 @@
                             <a href="{% url 'bank_detail' pk=bank.pk %}" class="waves-effect waves-light btn-floating btn-small">
                                 <i class="far fa-eye"></i>
                             </a>
-                            <a href="#" class="waves-effect waves-light btn-floating btn-small">
+                            <a href="{% url 'bank_edit' pk=bank.pk %}" class="waves-effect waves-light btn-floating btn-small">
                                 <i class="far fa-edit"></i>
                             </a>
                             <a href="#" class="waves-effect waves-light btn-floating btn-small red accent-2">
