--- a/benchmark/templates/benchmark/base.html
+++ b/benchmark/templates/benchmark/base.html
@@ -78,7 +78,7 @@
                 <i class="fas fa-user-tag"></i>Salespersons</a>
         </li>
         <li>
-            <a class="waves-effect grey-text text-darken-2" href="{% url 'bank_detail' %}">
+            <a class="waves-effect grey-text text-darken-2" href="#">
                 <i class="fas fa-toolbox"></i>Settings</a>
         </li>
         <li class="divider"></li>
@@ -140,7 +140,7 @@
                 <i class="fas fa-user-tag"></i>Salespersons</a>
         </li>
         <li>
-            <a class="waves-effect" href="{% url 'bank_detail' %}">
+            <a class="waves-effect" href="#">
                 <i class="fas fa-toolbox"></i>Settings</a>
         </li>
         <li>
