Modified templating django.

--- a/benchmark/templates/benchmark/bank_detail.html
+++ b/benchmark/templates/benchmark/bank_detail.html
@@ -1,4 +1,4 @@
-{% extends 'benchmark/base.html' %} {% load static %} {% block content %}
+{% extends 'general/base.html' %} {% load static %} {% block content %}
 
 <div class="card intro">
     <div class="card-image waves-effect waves-block waves-light">
@@ -367,7 +367,7 @@
                             <br>Director
                         </div>
                     </div>
-                    {% comment %} Line ke 2 {% endcomment %}
+                    {% comment %} Second Line {% endcomment %}
                     <div class="exec-box">
                         <div class="exec-item">
                             <img src="{% static 'images/exec/MEGA_IE.png' %}" alt="">
