--- a/benchmark/templates/benchmark/bank_edit.html
+++ b/benchmark/templates/benchmark/bank_edit.html
@@ -1,4 +1,4 @@
-{% extends 'benchmark/base.html' %} {% load static %} {% block content %}
+{% extends 'general/base.html' %} {% load static %} {% block content %}
 
 <div class="container">
     <h3 style="text-decoration:none">
@@ -20,7 +20,7 @@
                             {{ bank_form.as_p }}
                         </div>
                         <div class="col s12 m6 l6 input-field">
-                            {{ bank_form.bank_name }}
+                            <p>{{ bank_form.bank_name }}</p>
                         </div>
                     </div>
                     <button type="submit" class="save btn btn-small right">Save
