--- a/benchmark/templates/benchmark/bank_list.html
+++ b/benchmark/templates/benchmark/bank_list.html
@@ -1,4 +1,5 @@
-{% extends 'benchmark/base.html' %} {% load static %} {% block content %}
+{% extends 'general/base.html' %} {% load static %} {% block content %}
+
 <!--Section-->
 <section id="content">
     <div class="container">
@@ -43,4 +44,5 @@
         </div>
     </div>
 </section>
+
 {% endblock %}
