--- a/benchmark/templates/benchmark/dashboard.html
+++ b/benchmark/templates/benchmark/dashboard.html
@@ -1,4 +1,5 @@
-{% extends 'benchmark/base.html' %} {% load static %} {% block content %}
+{% extends 'general/base.html' %} {% load static %} {% block content %}
+
 <!--Section-->
 <section>
     <div class="container">
