--- a/benchmark/templates/benchmark/index.html
+++ b/benchmark/templates/benchmark/index.html
@@ -1,4 +1,5 @@
-{% extends 'benchmark/base.html' %} {% load static %} {% block content %}
+{% extends 'general/base.html' %} {% load static %} {% block content %}
+
 <!--Parallax-->
 <div class="parallax-container">
     <div class="parallax">
@@ -54,4 +55,5 @@
         <img src="{% static 'images/bg-196658.jpg' %}">
     </div>
 </div>
+
 {% endblock %}
