--- a/benchmark/templates/general/navbar.html
+++ b/benchmark/templates/general/navbar.html
@@ -15,6 +15,10 @@
             </a>
             <ul class="right hide-on-med-and-down">
                 <li>
+                    <a href="{% url 'bank_add' %}">
+                        <i class="fas fa-plus left"></i>Add</a>
+                </li>
+                <li>
                     <a href="{% url 'sample' %}">
                         <i class="fas fa-shopping-cart left"></i>Sample</a>
                 </li>
