--- a/benchmark/templates/benchmark/bank_form.html
+++ b/benchmark/templates/benchmark/bank_form.html
@@ -17,10 +17,19 @@
                 <form method="POST">{% csrf_token %}
                     <div class="row">
                         <div class="col s12 m12 l6">
-                            
+                            {{ form.non_field_errors}}
+                            {% include 'general/form_template.html' %}
+                            <p>
+                                <button type="reset" class="save btn btn-small right">Reset
+                                    <i class="fas fa-undo"></i>
+                                </button>
+                                <button type="submit" class="save btn btn-small right">Save
+                                    <i class="fas fa-save"></i>
+                                </button>
+                            </p>
                         </div>
                         <div class="col s12 m12 l6">
-                            
+
                         </div>
                     </div>
                 </form>
@@ -34,7 +43,7 @@
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        
+
                     </div>
                     <div class="col s12 m6 l6">
 
@@ -50,7 +59,7 @@
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        
+
                     </div>
                     <div class="col s12 m6 l6">
 
@@ -66,7 +75,7 @@
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        
+
                     </div>
                     <div class="col s12 m6 l6">
 
@@ -82,7 +91,7 @@
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        
+
                     </div>
                     <div class="col s12 m6 l6">
 
@@ -98,7 +107,7 @@
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s12 m12 l6">
-                        
+
                     </div>
                     <div class="col s12 m6 l6">
 
