--- a/benchmark/templates/users/registration_form.html
+++ b/benchmark/templates/users/registration_form.html
@@ -1,12 +1,14 @@
-{% extends 'general/base.html' %} {% load static %} {% block content %}
+{% extends 'general/base.html' %} {% load static %} {% load material_form %} {% block content %} 
 
 <div class="container expand-on-small-only">
-    <div class="row valign change-form">
+    <div class="row">
         <div class="col s12 m8 offset-m2 l8 offset-l2">
             <div class="card">
                 <form method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <div class="card-content">
-                        <span class="card-title grey-text text-darken-2">Registration Form</span>
+                        {% form form=form %} {% endform %}
+
+                        <!-- <span class="card-title grey-text text-darken-2">Registration Form</span>
                         <div class="row">
                             <div class="input-field col s12 required" id="id_username_container">
                                 <i class="fas fa-user-circle prefix"></i><input id="id_username" name="username"
@@ -60,7 +62,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="row">
+                                <div class="row">
                                     <div class="select-field col s12 required" id="id_gender_container">
                                         <label for="id_gender">Gender</label>
                                         <select id="id_gender" name="gender">
@@ -86,9 +88,9 @@
                                             <span for="id_agree_toc">I agree with the Terms and Conditions</span>
                                         </label>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="card-action">
                         <div class="right-align">
