--- a/benchmark/templates/general/index.html
+++ b/benchmark/templates/general/index.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +9,34 @@
     <link rel="shortcut icon" href="{% static 'icons/logo-mega.ico' %}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/landing.css'%}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/sweetalert2.css'%}" />
 </head>
+
 <body>
     <div class="container">
         <div class="split left">
+            <img class="center" src="{% static 'images/pexels-photo-908298.jpeg' %}" alt="organization background">
             <h1>The Organization</h1>
-            <a href="#" class="button">Read More</a>
+            <a href="{% url 'home' %}" class="button">Read More</a>
         </div>
         <div class="split right">
+            <img class="center" src="{% static 'images/pexels-photo-296881.jpeg' %}" alt="people background">
             <h1>The People</h1>
-            <a href="#" class="button">Read More</a>
+            <a href="#" class="button" onclick="sweet()">Read More</a>
         </div>
     </div>
     <script src="{% static 'js/landing.js'%}"></script>
+    <script src="{% static 'js/sweetalert2.js'%}"></script>
+    <script>
+        function sweet() {
+            swal({
+                type: 'error',
+                title: 'Oops...',
+                text: 'Something went wrong!',
+                footer: '<a href="{% url 'home' %}">Why do I have this issue?</a>',
+              })
+        }
+    </script>
 </body>
+
 </html>
