--- a/benchmark/templates/users/registration_form.html
+++ b/benchmark/templates/users/registration_form.html
@@ -2,14 +2,13 @@
 
 <div class="container expand-on-small-only">
     <div class="row">
-        <div class="col s12 m8 offset-m2 l8 offset-l2">
+        <div class="col s12 m10 offset-m2 l8 offset-l2">
             <div class="card">
                 <form method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <div class="card-content">
+                        <div class="card-title grey-text text-darken-2">Registration Form</div>
                         {% form form=form %} {% endform %}
-
-                        <!-- <span class="card-title grey-text text-darken-2">Registration Form</span>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="input-field col s12 required" id="id_username_container">
                                 <i class="fas fa-user-circle prefix"></i><input id="id_username" name="username"
                                     type="text">
