--- a/benchmark/templates/general/navbar.html
+++ b/benchmark/templates/general/navbar.html
@@ -66,8 +66,19 @@
             <i class="fas fa-toolbox"></i>Settings</a>
     </li>
     <li class="divider"></li>
+    {% if user.is_authenticated %}
     <li>
-        <a class="waves-effect grey-text text-darken-2" href="{% url 'branch_list' %}">
+        <a class="waves-effect grey-text text-darken-2" href="{% url 'logout' %}">
             <i class="fas fa-sign-out-alt"></i>Logout</a>
     </li>
+    {% else %}
+    <li>
+        <a class="waves-effect grey-text text-darken-2" href="{% url 'login' %}">
+            <i class="fas fa-sign-in-alt"></i>Login</a>
+    </li>
+    <li>
+        <a class="waves-effect grey-text text-darken-2" href="{% url 'register' %}">
+            <i class="fas fa-user-plus"></i>Register</a>
+    </li>
+    {% endif %}
 </ul>
