--- a/benchmark/templates/benchmark/sample.html
+++ b/benchmark/templates/benchmark/sample.html
@@ -16,7 +16,8 @@
                         <span class="card-title black-text">Card Title</span>
                     </div>
                     <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient
+                            because
                             I require little markup to use effectively.</p>
                     </div>
                     <div class="card-action">
@@ -27,7 +28,8 @@
             <div class="col s12 m6">
                 <div class="card large">
                     <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient
+                            because
                             I require little markup to use effectively.</p>
                     </div>
                     <div class="card-content">
