--- a/benchmark/templates/users/login.html
+++ b/benchmark/templates/users/login.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="card-action">
                         <div class="right-align">
-                            <small>Need An Account? <a href="{% url 'register' %}">Sign Up Now</a></small>
+                            <small>Need an Account? <a href="{% url 'register' %}">Sign Up Now</a></small>
                             <button class="waves-effect waves-light btn-small" type="submit">Login
                                 <i class="fas fa-paper-plane"></i>
                             </button>
