Updated password reset view.

--- a/benchmark/templates/users/password_reset_done.html
+++ b/benchmark/templates/users/password_reset_done.html
@@ -5,12 +5,7 @@
         <div class="col s12 m12 l8 offset-l2">
             <div class="card">
                 <div class="card-content light-green accent-1">
-                    <span class="card-title grey-text text-darken-2">You Have Been Logged Out</span>
-                </div>
-                <div class="card-action">
-                    <div class="right-align">
-                        <small><a href="{% url 'login' %}">Log In Again</a></small>
-                    </div>
+                    <span class="card-title grey-text text-darken-2">An email has been sent with instruction to reset your password</span>
                 </div>
             </div>
         </div>
