--- a/benchmark/templates/benchmark/bank_form.html
+++ b/benchmark/templates/benchmark/bank_form.html
@@ -1,13 +1,37 @@
-{% extends 'general/base.html' %} {% load static %} {% block content %}
+{% extends 'general/base.html' %} {% load static %} {% load material_form %} {% block content %}
 
-<div class="container">
-    <h3 style="text-decoration:none">
-        <a href="{% url 'bank_list' %}">
-            CREATE OR UPDATE <b>BANK</b>
-        </a>
-    </h3>
+<div class="container expand-on-small-only">
+    <div class="row">
+        <div class="col s12 m12 l8 offset-l2">
+            <h3 style="text-decoration:none">
+                <a href="{% url 'bank_list' %}">
+                    CREATE OR UPDATE <b>BANK</b>
+                </a>
+            </h3>
+            <div class="card">
+                <form method="POST" enctype="multipart/form-data">{% csrf_token %}
+                    <div class="card-content">
+                        <span class="card-title grey-text text-darken-2">Bank Form</span>
+                        {% form form=form %}
+                        {% endform %}
+                    </div>
+                    <div class="card-action">
+                        <div class="right-align">
+                            <button class="waves-effect waves-light btn-small red" type="reset">Reset
+                                <i class="fas fa-undo"></i>
+                            </button>
+                            <button class="waves-effect waves-light btn-small" type="submit">Submit
+                                <i class="fas fa-paper-plane"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <ul class="collapsible popout">
+<!-- <ul class="collapsible popout">
         <li>
             <div class="collapsible-header">
                 <h5>
@@ -20,7 +44,7 @@
                             <div class="card">
                                 {{ form.non_field_errors}}
                                 <div class="card-content">
-                                    {% include 'general/form_template.html' %} <!-- TEMPLATE -->
+                                    {% include 'general/form_template.html' %}
                                 </div>
                                 <div class="card-action">
                                     <div class="right-align">
@@ -121,7 +145,6 @@
                 </div>
             </div>
         </li>
-    </ul>
-</div>
+    </ul> -->
 
 {% endblock %}
