--- a/benchmark/templates/users/password_reset_complete.html
+++ b/benchmark/templates/users/password_reset_complete.html
@@ -4,12 +4,12 @@
     <div class="row">
         <div class="col s12 m12 l8 offset-l2">
             <div class="card">
-                <div class="card-content light-green accent-1">
-                    <span class="card-title grey-text text-darken-2">You Have Been Logged Out</span>
+                <div class="card-content light-blue accent-2">
+                    <span class="card-title grey-text text-darken-2">Your password has ben set</span>
                 </div>
                 <div class="card-action">
                     <div class="right-align">
-                        <small><a href="{% url 'login' %}">Log In Again</a></small>
+                        <small><a href="{% url 'login' %}">Sign In Here</a></small>
                     </div>
                 </div>
             </div>
