--- a/benchmark/templates/general/footer.html
+++ b/benchmark/templates/general/footer.html
@@ -27,7 +27,7 @@
     <div class="footer-copyright grey darken-3">
         <div class="container">
             Copyright © 2018 Raden Ramadista All Rights Reserved.
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <a class="grey-text text-lighten-4 right" href="{% url 'index' %}">More Links</a>
         </div>
     </div>
 </footer>
