--- a/benchmark/templates/users/password_reset_complete.html
+++ b/benchmark/templates/users/password_reset_complete.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col s12 m12 l8 offset-l2">
             <div class="card">
-                <div class="card-content light-blue accent-2">
+                <div class="card-content amber accent-2">
                     <span class="card-title grey-text text-darken-2">Your password has ben set</span>
                 </div>
                 <div class="card-action">
