Added password change view.

--- a/benchmark/templates/users/password_change.html
+++ b/benchmark/templates/users/password_change.html
@@ -6,17 +6,13 @@
             <div class="card">
                 <form method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <div class="card-content">
-                        <span class="card-title grey-text text-darken-2">Log In</span>
+                        <span class="card-title grey-text text-darken-2">Change Password</span>
                         {% form form=form %}
-                        {% part form.username prefix %}<i class="fas fa-user-circle prefix"></i>{% endpart %}
-                        {% part form.password prefix %}<i class="fas fa-unlock-alt prefix"></i>{% endpart %}
                         {% endform %}
                     </div>
                     <div class="card-action">
                         <div class="right-align">
-                            <small><a href="{% url 'password_reset' %}">Forgot Your Password?</a></small>
-                            <small>Need an Account? <a href="{% url 'register' %}"><b>Sign Up Now</b></a></small>
-                            <button class="waves-effect waves-light btn-small" type="submit">Login
+                            <button class="waves-effect waves-light btn-small" type="submit">Confirm
                                 <i class="fas fa-paper-plane"></i>
                             </button>
                         </div>
