--- a/benchmark/templates/general/footer.html
+++ b/benchmark/templates/general/footer.html
@@ -2,7 +2,7 @@
 
 <!--Footer-->
 <footer class="page-footer">
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col l6 s12">
                 <h5>Footer Content</h5>
@@ -23,7 +23,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="footer-copyright grey darken-3">
         <div class="container">
             Copyright © 2018 Raden Ramadista All Rights Reserved.
